[package]
name = "kad-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.9.0"
clap = {version = "3.1.6", features = ["derive"]}
futures = "0.3.21"
tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }

[dependencies.libp2p]
version = "0.49.0"
default-features = false
features = [
    "tcp-async-io",
    "dns-async-std",
    "dns-tokio",
    "gossipsub",
    "identify",
    "kad",
    "mplex",
    "noise",
    "ping",
    "request-response",
    "serde",
    "tcp-tokio",
    "websocket",
    "yamux",
]
